// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryStepsDataSource query duplicates in inputs, outputs and measurement names should return inputs and outputs with suffixes as new columns with measurements 1`] = `
[
  {
    "name": "Step ID",
    "type": "number",
    "values": [
      1,
      1,
      1,
      2,
      2,
      2,
    ],
  },
  {
    "name": "Voltage (Input) 1",
    "type": "number",
    "values": [
      1,
      1,
      1,
      1,
      1,
      1,
    ],
  },
  {
    "name": "Voltage (Input) 2",
    "type": "number",
    "values": [
      2,
      2,
      2,
      2,
      2,
      2,
    ],
  },
  {
    "name": "Voltage (Input) 3",
    "type": "number",
    "values": [
      3,
      3,
      3,
      3,
      3,
      3,
    ],
  },
  {
    "name": "Voltage (Input) 4",
    "type": "number",
    "values": [
      4,
      4,
      4,
      4,
      4,
      4,
    ],
  },
  {
    "name": "Voltage (Output) 1",
    "type": "number",
    "values": [
      1,
      1,
      1,
      1,
      1,
      1,
    ],
  },
  {
    "name": "Voltage (Output) 2",
    "type": "number",
    "values": [
      2,
      2,
      2,
      2,
      2,
      2,
    ],
  },
  {
    "name": "Voltage (Output) 3",
    "type": "number",
    "values": [
      3,
      3,
      3,
      3,
      3,
      3,
    ],
  },
  {
    "name": "Voltage (Output) 4",
    "type": "number",
    "values": [
      4,
      4,
      4,
      4,
      4,
      4,
    ],
  },
  {
    "name": "Voltage",
    "type": "number",
    "values": [
      3.5,
      3.6,
      3.7,
      3.5,
      3.6,
      3.7,
    ],
  },
  {
    "name": "Voltage-Low Limit",
    "type": "number",
    "values": [
      3,
      3,
      3,
      3,
      3,
      3,
    ],
  },
  {
    "name": "Voltage-High Limit",
    "type": "number",
    "values": [
      4,
      4,
      4,
      4,
      4,
      4,
    ],
  },
]
`;

exports[`QueryStepsDataSource query duplicates in inputs, outputs and measurement names should return inputs as new columns with measurements 1`] = `
[
  {
    "name": "Voltage (Input) 1",
    "type": "number",
    "values": [
      1,
      1,
      1,
      1,
      1,
      1,
    ],
  },
  {
    "name": "Voltage (Input) 2",
    "type": "number",
    "values": [
      2,
      2,
      2,
      2,
      2,
      2,
    ],
  },
  {
    "name": "Voltage (Input) 3",
    "type": "number",
    "values": [
      3,
      3,
      3,
      3,
      3,
      3,
    ],
  },
  {
    "name": "Voltage (Input) 4",
    "type": "number",
    "values": [
      4,
      4,
      4,
      4,
      4,
      4,
    ],
  },
  {
    "name": "Voltage",
    "type": "number",
    "values": [
      3.5,
      3.6,
      3.7,
      3.5,
      3.6,
      3.7,
    ],
  },
  {
    "name": "Voltage-Low Limit",
    "type": "number",
    "values": [
      3,
      3,
      3,
      3,
      3,
      3,
    ],
  },
  {
    "name": "Voltage-High Limit",
    "type": "number",
    "values": [
      4,
      4,
      4,
      4,
      4,
      4,
    ],
  },
]
`;

exports[`QueryStepsDataSource query duplicates in inputs, outputs and measurement names should return outputs as new columns with measurements 1`] = `
[
  {
    "name": "Voltage (Output) 1",
    "type": "number",
    "values": [
      1,
      1,
      1,
      1,
      1,
      1,
    ],
  },
  {
    "name": "Voltage (Output) 2",
    "type": "number",
    "values": [
      2,
      2,
      2,
      2,
      2,
      2,
    ],
  },
  {
    "name": "Voltage (Output) 3",
    "type": "number",
    "values": [
      3,
      3,
      3,
      3,
      3,
      3,
    ],
  },
  {
    "name": "Voltage (Output) 4",
    "type": "number",
    "values": [
      4,
      4,
      4,
      4,
      4,
      4,
    ],
  },
  {
    "name": "Voltage",
    "type": "number",
    "values": [
      3.5,
      3.6,
      3.7,
      3.5,
      3.6,
      3.7,
    ],
  },
  {
    "name": "Voltage-Low Limit",
    "type": "number",
    "values": [
      3,
      3,
      3,
      3,
      3,
      3,
    ],
  },
  {
    "name": "Voltage-High Limit",
    "type": "number",
    "values": [
      4,
      4,
      4,
      4,
      4,
      4,
    ],
  },
]
`;

exports[`QueryStepsDataSource query inputs/outputs are added as properties should return inputs as new columns with measurements 1`] = `
[
  {
    "name": "Input Voltage",
    "type": "number",
    "values": [
      1,
      1,
    ],
  },
  {
    "name": "Output Current",
    "type": "number",
    "values": [
      2,
      2,
    ],
  },
  {
    "name": "Voltage",
    "type": "number",
    "values": [
      3.7,
      3.7,
    ],
  },
]
`;

exports[`QueryStepsDataSource query inputs/outputs are added as properties should return outputs as new columns with measurements 1`] = `
[
  {
    "name": "Input Voltage",
    "type": "number",
    "values": [
      1,
      1,
    ],
  },
  {
    "name": "Output Current",
    "type": "number",
    "values": [
      2,
      2,
    ],
  },
  {
    "name": "Voltage",
    "type": "number",
    "values": [
      3.7,
      3.7,
    ],
  },
]
`;

exports[`QueryStepsDataSource query returns empty data for invalid query 1`] = `
[
  {
    "fields": [],
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource query should convert properties to Grafana fields 1`] = `
[
  {
    "name": "Properties",
    "type": "string",
    "values": [
      "{"key1":"value1","key2":"value2"}",
    ],
  },
]
`;

exports[`QueryStepsDataSource query should return data for valid data-output-type query 1`] = `
[
  {
    "fields": [
      {
        "name": "Step ID",
        "type": "number",
        "values": [
          1,
        ],
      },
      {
        "name": "Step name",
        "type": "string",
        "values": [
          "Step 1",
        ],
      },
      {
        "name": "Properties",
        "type": "string",
        "values": [
          "{"key1":"value1","key2":"value2"}",
        ],
      },
      {
        "name": "Workspace",
        "type": "string",
        "values": [
          "Default workspace",
        ],
      },
    ],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource query should return inputs as new columns with measurements when the all names are duplicates 1`] = `
[
  {
    "name": "Voltage (Input) 1",
    "type": "number",
    "values": [
      1,
      1,
      1,
      1,
      1,
      1,
    ],
  },
  {
    "name": "Voltage (Input) 2",
    "type": "number",
    "values": [
      2,
      2,
      2,
      2,
      2,
      2,
    ],
  },
  {
    "name": "Voltage (Input) 3",
    "type": "number",
    "values": [
      3,
      3,
      3,
      3,
      3,
      3,
    ],
  },
  {
    "name": "Voltage (Input) 4",
    "type": "number",
    "values": [
      4,
      4,
      4,
      4,
      4,
      4,
    ],
  },
  {
    "name": "Voltage",
    "type": "number",
    "values": [
      3.5,
      3.6,
      3.7,
      3.5,
      3.6,
      3.7,
    ],
  },
]
`;

exports[`QueryStepsDataSource query should return the workspace ID returned by API when the cache is empty 1`] = `
[
  {
    "name": "Workspace",
    "type": "number",
    "values": [
      1,
    ],
  },
]
`;

exports[`QueryStepsDataSource query should return the workspace ID when no matching entry exists in the cache for the ID returned by the API 1`] = `
[
  {
    "name": "Workspace",
    "type": "number",
    "values": [
      1,
    ],
  },
]
`;

exports[`QueryStepsDataSource query should return total count for valid total count output type queries 1`] = `
[
  {
    "fields": [
      {
        "name": "A",
        "values": [
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource query should show column header with no data when QuerySteps API returns empty array 1`] = `
[
  {
    "fields": [
      {
        "name": "Step ID",
        "type": "string",
        "values": [],
      },
    ],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`QueryStepsDataSource query show measurements is enabled duplicate measurement names should convert step measurements to Grafana fields as a column 1`] = `
[
  {
    "name": "Step ID",
    "type": "number",
    "values": [
      1,
      1,
    ],
  },
  {
    "name": "Voltage (V)",
    "type": "number",
    "values": [
      3.7,
      3.7,
    ],
  },
  {
    "name": "Voltage-Status",
    "type": "string",
    "values": [
      "Passed",
      "Passed",
    ],
  },
  {
    "name": "Voltage-Low Limit",
    "type": "number",
    "values": [
      3.5,
      3.5,
    ],
  },
  {
    "name": "Voltage-High Limit",
    "type": "number",
    "values": [
      4,
      4,
    ],
  },
  {
    "name": "Current (A)",
    "type": "number",
    "values": [
      0,
      1.2,
    ],
  },
  {
    "name": "Current-Status",
    "type": "string",
    "values": [
      "",
      "Failed",
    ],
  },
  {
    "name": "Current-Low Limit",
    "type": "number",
    "values": [
      0,
      1,
    ],
  },
  {
    "name": "Current-High Limit",
    "type": "number",
    "values": [
      0,
      1.5,
    ],
  },
]
`;

exports[`QueryStepsDataSource query show measurements is enabled duplicate measurement names should duplicate step properties, inputs and output column values 1`] = `
[
  {
    "name": "Step ID",
    "type": "number",
    "values": [
      1,
      1,
    ],
  },
  {
    "name": "Voltage (V)",
    "type": "number",
    "values": [
      3.7,
      3.7,
    ],
  },
  {
    "name": "Voltage-Status",
    "type": "string",
    "values": [
      "Passed",
      "Passed",
    ],
  },
  {
    "name": "Voltage-Low Limit",
    "type": "number",
    "values": [
      3.5,
      3.5,
    ],
  },
  {
    "name": "Voltage-High Limit",
    "type": "number",
    "values": [
      4,
      4,
    ],
  },
  {
    "name": "Current (A)",
    "type": "number",
    "values": [
      0,
      1.2,
    ],
  },
  {
    "name": "Current-Status",
    "type": "string",
    "values": [
      "",
      "Failed",
    ],
  },
  {
    "name": "Current-Low Limit",
    "type": "number",
    "values": [
      0,
      1,
    ],
  },
  {
    "name": "Current-High Limit",
    "type": "number",
    "values": [
      0,
      1.5,
    ],
  },
]
`;

exports[`QueryStepsDataSource query show measurements is enabled should create cells with 0 when measurements are not available 1`] = `
[
  {
    "name": "Step ID",
    "type": "number",
    "values": [
      1,
      2,
    ],
  },
  {
    "name": "Current",
    "type": "number",
    "values": [
      1.2,
      0,
    ],
  },
  {
    "name": "Voltage",
    "type": "number",
    "values": [
      0,
      3.7,
    ],
  },
]
`;

exports[`QueryStepsDataSource query show measurements is enabled should create new columns when units are different in the same measurement 1`] = `
[
  {
    "name": "Step ID",
    "type": "number",
    "values": [
      1,
      2,
    ],
  },
  {
    "name": "Current (A)",
    "type": "number",
    "values": [
      1.2,
      0,
    ],
  },
  {
    "name": "Current (mA)",
    "type": "number",
    "values": [
      0,
      370,
    ],
  },
]
`;

exports[`QueryStepsDataSource querySteps should return data when there are valid queries 1`] = `
{
  "continuationToken": null,
  "steps": [
    {
      "name": "Step 1",
      "properties": {
        "key1": "value1",
        "key2": "value2",
      },
      "stepId": "1",
      "workspace": "1",
    },
  ],
  "totalCount": 1,
}
`;
